@@ -1,8 +1,8 @@
 Package: MultiRankSeq
 Type: Package
 Title: MultiRankSeq
-Version: 1.2.6
-Date: 2016-04-19
+Version: 1.2.7
+Date: 2016-04-22
 Author: Shilin Zhao, Yan Guo, Shyr Yu
 Maintainer: Shilin Zhao <shilin.zhao@vanderbilt.edu>
 Description: MultiRankSeq package provides a rank sum approach using multiple
@@ -18,3 +18,4 @@ Depends:
     knitr
 Collate:
     'MultiRankSeqFunctions.R'
+RoxygenNote: 5.0.1
