@@ -1,3 +1,10 @@
+# Generated by roxygen2: do not edit by hand
+
+export(MultiRankSeqReport)
 export(diffReport)
 export(findDiff)
-export(MultiRankSeqReport)
+import(DESeq2)
+import(VennDiagram)
+import(baySeq)
+import(edgeR)
+import(knitr)
