@@ -1,3 +1,6 @@
+2016-04-22
+MultiRankSeq 1.2.7: Update due to the changes in baySeq package.
+
 2016-04-19
 MultiRankSeq 1.2.6: Update due to the changes in baySeq package.
 
